# LoopGPT

./: .gitignore  AGENTS.md  Accompaniment.py  ProgressionPlus.py  README.md  app.py  loop.json  loop_gen.ipynb  model_list.json  output.mid  pyproject.toml  requirements.txt
.agents/skills/add-model-support/: SKILL.md
.github/skills/add-model-support/: SKILL.md
Prompts/: accompaniment chord generation.txt  chord generation.txt  loop gen.txt  melody generation.txt  prompt translation with melody.txt  prompt translation.txt
Training Examples/: C Major A rhythmic sad pop song.json  D Major A rhythmic sad pop song.json  E Major A rhythmic sad pop song.json  E Major a daniel ceasar type rnb soulful .json  F Major A rhythmic sad pop song.json  G Major A daniel ceasar rnb soul type progression.json  tmpa2vb39ag.json
code/: apicalls.py  decorators.py  exceptions.py  midi_processing.py  objects.py  utils.py
eval/: tests.py
evaluation/: README.md  analysis.py  evaluator.py  ollama_eval.py  prompt_translation_analysis.py  prompt_translation_eval.py  sota_eval.py  tests.py
soundfonts/: README.md
src/: .env  .env.example  audio.py  claude_api.py  gemini_api.py  gpt_api.py  history.py  midi_processing.py  o_api.py  objects.py  ollama_api.py  openai_api.py  runs.py  utils.py
tests/: conftest.py  test_app.py  test_app_compatibility.py  test_audio.py  test_bootstrap.py  test_evaluator.py  test_evaluator_direct_run_guard.py  test_gemini_api.py  test_history.py  test_midi_processing.py  test_objects.py  test_provider_response_parsing.py  test_runs.py  test_utils.py
(+2 files in other folders)
