[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loopgpt"
version = "0.1.0"
description = "AI-powered 4-bar MIDI loop generation from natural-language prompts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"anthropic==0.96.0",
	"dash==4.0.0",
	"dash-bootstrap-components==2.0.4",
	"google-genai==1.65.0",
	"gradio==5.30.0",
	"midi2audio==0.1.1",
	"mido==1.3.3",
	"numpy==2.2.6",
	"ollama==0.6.1",
	"openai==1.79.0",
	"pandas==2.2.3",
	"plotly==6.0.1",
	"pydantic==2.11.4",
	"pydub==0.25.1",
	"python-dotenv==1.1.0",
	"rich>=14.0.0",
]

[project.urls]
Repository = "https://github.com/laceyp99/LoopGPT"

[project.optional-dependencies]
dev = [
	"pytest>=8.3,<9",
]

[tool.setuptools]
include-package-data = true
py-modules = ["app"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "evaluation*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
markers = [
	"slow: marks slower-running tests",
	"external: marks tests that require external services or binaries",
]
